--- a/back/.gitignore
+++ b/back/.gitignore
@@ -36,12 +36,10 @@ lerna-debug.log*
 !.vscode/extensions.json
 
 # dotenv environment variable files
-.env
 .env.development.local
 .env.test.local
 .env.production.local
-.env.local
-
+!.env
 # temp directory
 .temp
 .tmp
